# LLMArk

./: README.md  demo.py  pyproject.toml  requirements.txt  setup.py
LLMArk/model/: builder.py
LLMArk/serve/: cli.py
llmark/: __init__.py  conversation.py  get_box.py  mm_utils.py  utils.py
llmark/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  llmark_arch.py  make_delta.py  utils.py
llmark/model/language_model/: llmark_qwen.py
llmark/model/multimodal_encoder/: clip_encoder.py  hf_vision.py  open_clip_encoder.py  siglip_encoder.py
llmark/model/multimodal_encoder/dev_eva_clip/: eva_vit.py
llmark/model/multimodal_encoder/eva_clip/: eva_clip_encoder.py  eva_vit.py
val/: eval_captions.json  train_captions.json
